src/root.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');

* {
    margin: 0;

}

html {
    height: 100%;
}

body {
  /* font-family: Gordita, Roboto, Oxygen, Ubuntu, Cantarell,
    'Open Sans', 'Helvetica Neue', sans-serif; */
  font-family: 'Ubuntu', sans-serif;
  /* background-image: linear-gradient(#EEBAA5, #DE7D8E); */
  background-repeat: no-repeat;
  background-size: cover;
  height: 100%;
}

a {
  margin-right: 1rem;
}

h1 {
  color: #335d92;
  text-transform: uppercase;
  font-size: 4rem;
  font-weight: 100;
  line-height: 1.1;
  margin: 1rem;
  width: 100%;
  text-align: center;
  max-width: none;
}

main {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

p {
  max-width: 14rem;
  margin: 2rem auto;
  line-height: 1.35;
}

img {
    width: 40vw;
    min-width: 350px;
    max-width: 500px;
    position: relative;
}

@media (min-width: 480px) {
  h1 {
    max-width: none;
  }

  p {
    max-width: none;
  }
}

.buttonbox {
  display: flex;
  align-items: center;
  justify-content: center;
}

.buttonbox button {
  margin: 1em; 
  display: inline-block;
  padding: 0.5em 2em;
  border-radius: 2rem;
  font-size: 1.2em;
  background-color: transparent;
  border: #296bbb solid 0.3em;
  color: #296bbb;
  font-weight: bold;
  transition: 0.25s;
}

.buttonbox button:hover {
  transition: 0.25s;
  padding: 0.5em 2.5em;
  border: #4ac424 solid 0.3em;
  color: #4ac424;
}

